--- a/pom.xml
+++ b/pom.xml
@@ -54,5 +54,12 @@
       <version>4.0.1.2</version>
       <scope>provided</scope>
     </dependency>
+      <dependency>
+          <groupId>com.google.android</groupId>
+          <artifactId>support-v4</artifactId>
+          <version>r7</version>
+          <scope>provided</scope>
+      </dependency>
+
   </dependencies>
 </project>
