adding dependencies to typewriter to get it to compile with action bar sherlock

--- a/pom.xml
+++ b/pom.xml
@@ -60,5 +60,11 @@
             <version>r7</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.actionbarsherlock</groupId>
+            <artifactId>library</artifactId>
+            <version>4.1.0</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
