--- a/build.gradle
+++ b/build.gradle
@@ -8,12 +8,10 @@ repositories {
 dependencies {
     compile 'com.google.android:android:4.0.1.2'
     compile 'com.google.android:support-v4:r7'
-
-    testCompile 'org.scala-lang:scala-library:2.10.1'
-
     testCompile 'org.scalatest:scalatest_2.10:1.9.1'
     testCompile 'com.pivotallabs:robolectric:1.2'
-
+    testCompile 'org.scala-lang:scala-library:2.10.1'
+    testCompile 'org.scala-lang:scala-reflect:2.10.1'
     testCompile 'org.mockito:mockito-core:1.9.0'
     testCompile group: 'junit', name: 'junit', version: '4.10'
 }
