--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,7 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.10'
 }
 
+    jvmArgs += [ "-XX:MaxPermSize=512m" ]
 task test(overwrite: true, dependsOn: compileTestScala) << {
     ant.taskdef(
             name: 'scalatest',
