removing weirdy stuff that puts versionning of javac/java on classes. Should not java run everwhere? "

--- a/build.gradle
+++ b/build.gradle
@@ -13,8 +13,8 @@ def isReleaseBuild
 def sonatypeRepositoryUrl
 
 
-targetCompatibility = 1.6
-sourceCompatibility = 1.6
+//targetCompatibility = 1.6
+//sourceCompatibility = 1.6
 
 if (hasProperty("release")) {
     isReleaseBuild = true
